[package]
name = "simple-game-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = { git = "https://github.com/not-fl3/miniquad" }
image = "0.23.14"

# [dev-dependencies]

[profile.release]
lto = true
opt-level = 3
